Añadido el apéndice como manual de usuario de fantasy

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/CasosUso.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Desarrollo/CasosUso.tex
@@ -5,7 +5,7 @@
 \section{Diseño de casos de uso}
 En el diseño del sistema se han propuesto una serie de casos de uso que tienen la siguiente precondición implícita para poder usar dichos casos de uso en la aplicación final:
 \begin{itemize}
-	\item El usuario (profesorado/alumnado) debe tener una cuenta en la plataforma de Stimey y haber iniciado sesión con dicha cuenta.
+	\item El usuario (profesorado/alumnado) debe tener una cuenta en la plataforma de STIMEY y haber iniciado sesión con dicha cuenta.
 \end{itemize}
 
 Los casos de uso propuestos son los siguientes:
@@ -861,9 +861,9 @@ Los casos de uso propuestos son los siguientes:
 %\end{itemize}
 
 \section{Diseño de la interfaz de usuario}
-El diseño de la interfaz de usuario usado en el proyecto Fantasy sigue las reglas de diseño de \href{https://stimey.eu/home}{Stimey} tanto en la vista de creación de la fantasía, como en la vista jugar dicha fantasía.
+El diseño de la interfaz de usuario usado en el proyecto Fantasy sigue las reglas de diseño de \href{https://stimey.eu/home}{STIMEY} tanto en la vista de creación de la fantasía, como en la vista jugar dicha fantasía.
 
-Se ha llegado a un acuerdo con los integrantes del proyecto Stimey para que nos faciliten las reglas de estilo y poder hacer que se asemeje lo máximo posible, ya que la finalidad del proyecto, es integrarlo en su plataforma.
+Se ha llegado a un acuerdo con los integrantes del proyecto STIMEY para que nos faciliten las reglas de estilo y poder hacer que se asemeje lo máximo posible, ya que la finalidad del proyecto, es integrarlo en su plataforma.
 
 \section{Diseño de datos}
 En cuanto al diseño de datos, hemos propuesto el siguiente diagrama para la base de datos del proyecto Fantasy:\\
