--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/Conclusiones.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/Conclusiones.tex
@@ -8,4 +8,4 @@ En cuanto a las lecciones aprendidas, todos los integrantes del grupo han trabaj
 Por ello, la gestión del tiempo y de la división de las tareas ha sido algo esencial en el avance de este proyecto.
 
 \section{Trabajo futuro}
-Como trabajo futuro quedaría la implementación de la aplicación web Fantasy en la plataforma de Stimey de modo que pertenezca a sus laboratorios y que sea usada por todos aquellos usuarios (tanto profesores como alumnos) que desean aprender sobre un tema en concreto, o usarlo en sus clases para enseñar a sus alumnos de un modo más interactivo, creativo y divertido.
+Como trabajo futuro quedaría la implementación de la aplicación web Fantasy en la plataforma de STIMEY de modo que pertenezca a sus laboratorios y que sea usada por todos aquellos usuarios (tanto profesores como alumnos) que desean aprender sobre un tema en concreto, o usarlo en sus clases para enseñar a sus alumnos de un modo más interactivo, creativo y divertido.
