--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
@@ -255,7 +255,7 @@
 		\Large
 		
 		\textsc{Departamento}: \nohyphens{Ingeniería Informática.} \\
-		\textsc{Directora del proyecto}: \nohyphens{Alicia Ale.} \\
+		\textsc{Directora del proyecto}: \nohyphens{Alecia Adelaide May Reid.} \\
 		\textsc{Autor del Proyecto}: \nohyphens{Equipo Fantasy}. \\
 	\end{flushleft}
 	
