--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/Introduccion.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/Introduccion.tex
@@ -34,3 +34,5 @@ Este documento está organizado en función de las especificaciones expuestas pa
 	\item Manual de instalación.
 	\item Conclusiones.
 \end{enumerate}
+
+Además de este documento, también contamos con un apéndice donde se narra el manual de usuario, paso a paso.
