--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/PlanProyecto.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/PlanProyecto.tex
@@ -27,7 +27,7 @@ El proyecto tendrá una duración de tres meses y se realizarán reuniones seman
 \end{itemize}
 
 \subsection{Recursos hardware y software}
-Como recursos hardware tenemos los portátiles de los 7 miembros del grupo y el servidor de Stimey.
+Como recursos hardware tenemos los portátiles de los 7 miembros del grupo y el servidor de STIMEY.
 
 Como recursos software tenemos el framework Laravel, Atom, Visual Studio Code, TeXStudio, PhPMyAdmin, MySQL, GitHub.
 
@@ -44,7 +44,7 @@ Como recursos software tenemos el framework Laravel, Atom, Visual Studio Code, T
 \begin{itemize}
 	\item Nuestros ordenadores.
 	\item Transporte a la escuela.
-	\item Gastos del servidor de Stimey.
+	\item Gastos del servidor de STIMEY.
 \end{itemize}
 
 \section{Gestión de riesgos}
