--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/RequirementsAnalisys.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/RequirementsAnalisys.tex
@@ -1,6 +1,6 @@
 \chapter{Analisys of requirements}
 \section{Workspace}
-The graphic design used should be the same as the page on \href{https://stimey.eu/home}{Stimey} on all the icons used.
+The graphic design used should be the same as the page on \href{https://stimey.eu/home}{STIMEY} on all the icons used.
 
 We can highlight two user roles: teachers and students.
 
