--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/UseCase.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/UseCase.tex
@@ -2,7 +2,7 @@
 \section{Design of use cases}
 All the use cases described below have the following implicit precondition to be able to use said use cases in the final application:
 \begin{itemize}
-	\item The user (teachers/students) must have an account on the Stimey platform and have logged in with that account.
+	\item The user (teachers/students) must have an account on the STIMEY platform and have logged in with that account.
 \end{itemize}
 
 The proposed use cases are the following:
