--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
@@ -34,3 +34,5 @@ This document is organized according to the specifications set out for the prese
 	\item Installation manual.
 	\item Conclusions.
 \end{enumerate}
+
+In addition to this document, we also have an appendix where the user manual is narrated, step by step.
