--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
@@ -27,7 +27,7 @@ The project will last for three months and weekly meetings with the client will 
 \end{itemize}
 
 \subsection{Hardware and software resources}
-As hardware resources we have the laptops of the 7 members of the group and the Stimey server.
+As hardware resources we have the laptops of the 7 members of the group and the STIMEY server.
 
 As software resources we have the framework Laravel, Atom, Visual Studio Code, TeXStudio, PhPMyAdmin, MySQL, GitHub.
 
@@ -44,7 +44,7 @@ As software resources we have the framework Laravel, Atom, Visual Studio Code, T
 \begin{itemize}
 	\item Our computers.
 	\item Transportation to school.
-	\item Stimey server expenses.
+	\item STIMEY server expenses.
 \end{itemize}
 
 \section{Risk management}
