--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/ManualUsuario.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/ManualUsuario.tex
@@ -1,43 +1,53 @@
 \chapter{Manual de usuario}
-\section{Introducción}
-Aquí se narrará el manual que han de seguir los usuarios del sistema para usar la aplicación.
+\section{Introducción}
+Aquí se narrará el manual que han de seguir los usuarios del sistema para usar la aplicación\footnote{Para mayor detalle sobre el manual de usuario, consultar el apéndice.}.
 
-Teniendo en cuenta que será una aplicación web, el primer paso será dirigirse a la dirección web donde esté ubicado el servicio\footnote{Si ha sido integrado en la plataforma de Stimey, estará en la zona de laboratorios.}.
+Teniendo en cuenta que será una aplicación web, el primer paso será dirigirse a la dirección web donde esté ubicado el servicio\footnote{Si ha sido integrado en la plataforma de STIMEY, estará en la zona de laboratorios.}.
 
-\section{Características}
-La aplicación Fantasy permite al usuario crear fantasías para que los estudiantes aprendan de una forma más creativa y divertida viendo los puntos activos y desarrollando los \textit{quizzes} asociados a cada punto activo, y, finalmente, el \textit{quiz} final asociado a cada fantasía.
+\section{Características}
+La aplicación Fantasy permite al usuario crear fantasías para que los estudiantes aprendan de una forma más creativa y divertida viendo los puntos activos y desarrollando los \textit{quizzes} asociados a cada punto activo, y, finalmente, el \textit{quiz} final asociado a cada fantasía.
 
-Esta puntuación será enviada a la plataforma de Stimey para ser almacenada en el perfil de cada alumno.
+Esta puntuación será enviada a la plataforma de STIMEY para ser almacenada en el perfil de cada alumno.
 
-Los alumnos también podrán realizar fantasías que sean ordenadas por sus profesores como tarea. Esta tarea, podrá ser en pareja o individual, y será posteriormente evaluada por el profesor que puso la tarea.
+Los alumnos también podrán realizar fantasías que sean ordenadas por sus profesores como tarea. Esta tarea, podrá ser en pareja o individual, y será posteriormente evaluada por el profesor que puso la tarea.
 
-\section{Requisitos previos}
-Los requisitos previos a la hora de usar la aplicación del proyecto Fantasy es entrar en la dirección web donde se encuentre soportado el servicio y registrarse con la cuenta del usuario que vaya a usar la aplicación.
+\section{Requisitos previos}
+Los requisitos previos a la hora de usar la aplicación del proyecto Fantasy es entrar en la dirección web donde se encuentre soportado el servicio y registrarse con la cuenta del usuario que vaya a usar la aplicación.
 
-Por lo tanto, no es necesario tener nada instalado en el ordenador del usuario debido a que la aplicación se encuentra alojada en un servidor.
+Por lo tanto, no es necesario tener nada instalado en el ordenador del usuario debido a que la aplicación se encuentra alojada en un servidor.
 
 \section{Utilización}
-\textcolor{red}{¿HACE FALTA PONER FOTOS?}
-
 A la hora de utilizar la aplicación y, habiendo accedido con nuestro usuario y contraseña a la plataforma, tendremos una pantalla principal donde podremos ver nuestras fantasías (las que hayamos creado nosotros) y las fantasías que hemos marcado como favoritas para volver a jugarlas.
-%Estaría bien poner una foto de la cara principal de la aplicación
 
+\subsection{Crear fantasía}
 Si queremos crear una fantasía, hacemos click sobre el icono de crear una nueva fantasía.
 
 A continuación, rellenamos los campos necesarios y ya estaría creada la fantasía.
 
-Entonces, es hora de añadir los puntos activos a la fantasía. Para ello hacemos click izquierdo en el icono de añadir un nuevo punto activo.
+Una vez hayamos terminado con la creación de la fantasía, podremos volver atrás y verla en la parte reservada a nuestras fantasías.
+
+\subsection{Modificar fantasía}
+Si queremos modificar una fantasía, deberemos hacer click izquierdo sobre el icono de editar fantasía.
+
+A continuación, modificaremos los campos que deseemos cambiar.
+
+\subsection{Eliminar fantasía}
+Si queremos eliminar una fantasía, haremos click izquierdo sobre el icono de borrar fantasía.
+
+\subsection{Crear punto activo}
+A la hora de añadir los puntos activos a la fantasía. Para ello hacemos click izquierdo en el icono de añadir un nuevo punto activo.
 
 A continuación, rellenamos los campos necesarios y ya tendríamos creado el primer punto activo.
 
-También podremos mover y redimensionar el punto activo a nuestro gusto de forma que se quede donde y como nosotros deseemos.
+Podremos crear hasta un máximo de diez puntos activos siguiendo los pasos anteriormente mencionados para cada punto activo.
 
-Podremos crear hasta un máximo de diez puntos activos siguiendo los pasos anteriormente mencionados para cada punto activo.
+\subsection{Modificar punto activo}
+En los puntos activos tendremos la posibilidad de mover y redimensionar el punto activo a nuestro gusto de forma que se quede donde y como nosotros deseemos.
 
-Una vez hayamos terminado con la creación de la fantasía, podremos volver atrás y verla en la parte reservada a nuestras fantasías.
+Además, haciendo doble click izquierdo sobre ellos, tendremos la posibilidad de cambiar el contenido de sus campos.
 
-Si queremos editar una fantasía anteriormente creada, solo tenemos que hacer click izquierdo en el icono de editar la fantasía.
+\subsection{Eliminar punto activo}
+%se supone que esto debe estar hecho
 
-Si, por alguna razón, queremos eliminar una fantasía, solo tendremos que hacer click izquierdo en el icono de borrar la fantasía.
-
-Cuando queramos jugar una fantasía (bien sea creada por nosotros o por otro usuario), tendremos que hacer click izquierdo en el icono de jugar la fantasía y se podrá jugar. Tenemos que tener en cuenta que para los alumnos, solo guardaremos la primera nota que saquen, aunque puedan repetir al fantasía tantas veces como quieran.
+\subsection{Jugar fantasía}
+Cuando queramos jugar una fantasía (bien sea creada por nosotros o por otro usuario), tendremos que hacer click izquierdo en el icono de jugar la fantasía y se podrá jugar\footnote{Tenemos que tener en cuenta que para los alumnos, solo guardaremos la primera nota que saquen, aunque puedan repetir al fantasía tantas veces como quieran.}.
