--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
@@ -243,7 +243,7 @@
 	\Large
 	
 	\textsc{Department}: \nohyphens{Computer Engineering.} \\
-	\textsc{Proyect director}: \nohyphens{Alicia Ale.} \\
+	\textsc{Proyect director}: \nohyphens{Alecia Adelaide May Reid.} \\
 	\textsc{Project author}: \nohyphens{Team Fantasy}. \\
 \end{flushleft}
 
