Añadido el apéndice como manual de usuario de fantasy

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/ManualUsuario.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Epilogo/ManualUsuario.tex
@@ -1,20 +1,29 @@
 \chapter{Manual de usuario}
-\section{Introducción}
+\section{Introducción}
+
 Aquí se narrará el manual que han de seguir los usuarios del sistema para usar la aplicación\footnote{Para mayor detalle sobre el manual de usuario, consultar el apéndice.}.
 
-Teniendo en cuenta que será una aplicación web, el primer paso será dirigirse a la dirección web donde esté ubicado el servicio\footnote{Si ha sido integrado en la plataforma de STIMEY, estará en la zona de laboratorios.}.
+Teniendo en cuenta que será una aplicación web, el primer paso será dirigirse a la dirección web donde esté ubicado el servicio\footnote{Si ha sido integrado en la plataforma de STIMEY, estará en la zona de laboratorios.}.
 
-\section{Características}
-La aplicación Fantasy permite al usuario crear fantasías para que los estudiantes aprendan de una forma más creativa y divertida viendo los puntos activos y desarrollando los \textit{quizzes} asociados a cada punto activo, y, finalmente, el \textit{quiz} final asociado a cada fantasía.
 
-Esta puntuación será enviada a la plataforma de STIMEY para ser almacenada en el perfil de cada alumno.
+\section{Características}
 
-Los alumnos también podrán realizar fantasías que sean ordenadas por sus profesores como tarea. Esta tarea, podrá ser en pareja o individual, y será posteriormente evaluada por el profesor que puso la tarea.
+La aplicación Fantasy permite al usuario crear fantasías para que los estudiantes aprendan de una forma más creativa y divertida viendo los puntos activos y desarrollando los \textit{quizzes} asociados a cada punto activo, y, finalmente, el \textit{quiz} final asociado a cada fantasía.
 
-\section{Requisitos previos}
-Los requisitos previos a la hora de usar la aplicación del proyecto Fantasy es entrar en la dirección web donde se encuentre soportado el servicio y registrarse con la cuenta del usuario que vaya a usar la aplicación.
 
-Por lo tanto, no es necesario tener nada instalado en el ordenador del usuario debido a que la aplicación se encuentra alojada en un servidor.
+Esta puntuación será enviada a la plataforma de STIMEY para ser almacenada en el perfil de cada alumno.
+
+
+Los alumnos también podrán realizar fantasías que sean ordenadas por sus profesores como tarea. Esta tarea, podrá ser en pareja o individual, y será posteriormente evaluada por el profesor que puso la tarea.
+
+
+\section{Requisitos previos}
+
+Los requisitos previos a la hora de usar la aplicación del proyecto Fantasy es entrar en la dirección web donde se encuentre soportado el servicio y registrarse con la cuenta del usuario que vaya a usar la aplicación.
+
+
+Por lo tanto, no es necesario tener nada instalado en el ordenador del usuario debido a que la aplicación se encuentra alojada en un servidor.
+
 
 \section{Utilización}
 A la hora de utilizar la aplicación y, habiendo accedido con nuestro usuario y contraseña a la plataforma, tendremos una pantalla principal donde podremos ver nuestras fantasías (las que hayamos creado nosotros) y las fantasías que hemos marcado como favoritas para volver a jugarlas.
@@ -34,12 +43,17 @@ A continuación, modificaremos los campos que deseemos cambiar.
 \subsection{Eliminar fantasía}
 Si queremos eliminar una fantasía, haremos click izquierdo sobre el icono de borrar fantasía.
 
+\subsection{Duplicar fantasía}
+
+%Se supone que esto debe estar hecho
+
 \subsection{Crear punto activo}
 A la hora de añadir los puntos activos a la fantasía. Para ello hacemos click izquierdo en el icono de añadir un nuevo punto activo.
 
 A continuación, rellenamos los campos necesarios y ya tendríamos creado el primer punto activo.
 
-Podremos crear hasta un máximo de diez puntos activos siguiendo los pasos anteriormente mencionados para cada punto activo.
+Podremos crear hasta un máximo de diez puntos activos siguiendo los pasos anteriormente mencionados para cada punto activo.
+
 
 \subsection{Modificar punto activo}
 En los puntos activos tendremos la posibilidad de mover y redimensionar el punto activo a nuestro gusto de forma que se quede donde y como nosotros deseemos.
