--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Appendix/Appendix.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Appendix/Appendix.tex
@@ -278,22 +278,32 @@
 \newpage
 	
 \chapter{User manual}
-\section{Introducción}
-Aquí se narrará el manual que han de seguir los usuarios del sistema para usar la aplicación.
+\section{Introducción}
 
-Teniendo en cuenta que será una aplicación web, el primer paso será dirigirse a la dirección web donde esté ubicado el servicio\footnote{Si ha sido integrado en la plataforma de STIMEY, estará en la zona de laboratorios.}.
+Aquí se narrará el manual que han de seguir los usuarios del sistema para usar la aplicación.
 
-\section{Características}
-La aplicación Fantasy permite al usuario crear fantasías para que los estudiantes aprendan de una forma más creativa y divertida viendo los puntos activos y desarrollando los \textit{quizzes} asociados a cada punto activo, y, finalmente, el \textit{quiz} final asociado a cada fantasía.
 
-Esta puntuación será enviada a la plataforma de STIMEY para ser almacenada en el perfil de cada alumno.
+Teniendo en cuenta que será una aplicación web, el primer paso será dirigirse a la dirección web donde esté ubicado el servicio\footnote{Si ha sido integrado en la plataforma de STIMEY, estará en la zona de laboratorios.}.
 
-Los alumnos también podrán realizar fantasías que sean ordenadas por sus profesores como tarea. Esta tarea, podrá ser en pareja o individual, y será posteriormente evaluada por el profesor que puso la tarea.
 
-\section{Requisitos previos}
-Los requisitos previos a la hora de usar la aplicación del proyecto Fantasy es entrar en la dirección web donde se encuentre soportado el servicio y registrarse con la cuenta del usuario que vaya a usar la aplicación.
+\section{Características}
 
-Por lo tanto, no es necesario tener nada instalado en el ordenador del usuario debido a que la aplicación se encuentra alojada en un servidor.
+La aplicación Fantasy permite al usuario crear fantasías para que los estudiantes aprendan de una forma más creativa y divertida viendo los puntos activos y desarrollando los \textit{quizzes} asociados a cada punto activo, y, finalmente, el \textit{quiz} final asociado a cada fantasía.
+
+
+Esta puntuación será enviada a la plataforma de STIMEY para ser almacenada en el perfil de cada alumno.
+
+
+Los alumnos también podrán realizar fantasías que sean ordenadas por sus profesores como tarea. Esta tarea, podrá ser en pareja o individual, y será posteriormente evaluada por el profesor que puso la tarea.
+
+
+\section{Requisitos previos}
+
+Los requisitos previos a la hora de usar la aplicación del proyecto Fantasy es entrar en la dirección web donde se encuentre soportado el servicio y registrarse con la cuenta del usuario que vaya a usar la aplicación.
+
+
+Por lo tanto, no es necesario tener nada instalado en el ordenador del usuario debido a que la aplicación se encuentra alojada en un servidor.
+
 
 \section{Utilización}
 A la hora de utilizar la aplicación y, habiendo accedido con nuestro usuario y contraseña a la plataforma, tendremos una pantalla principal donde podremos ver nuestras fantasías (las que hayamos creado nosotros) y las fantasías que hemos marcado como favoritas para volver a jugarlas.
@@ -323,6 +333,10 @@ A continuación, modificaremos los campos que deseemos cambiar.
 %poner foto de los campos
 
 
+\subsection{Duplicar fantasía}
+%Se supone que esto debe estar hecho
+
+
 \subsection{Eliminar fantasía}
 Si queremos eliminar una fantasía, haremos click izquierdo sobre el icono de borrar fantasía.
 
@@ -339,7 +353,8 @@ A continuación, rellenamos los campos necesarios y ya tendríamos creado el pri
 
 %foto de los campos
 
-Podremos crear hasta un máximo de diez puntos activos siguiendo los pasos anteriormente mencionados para cada punto activo.
+Podremos crear hasta un máximo de diez puntos activos siguiendo los pasos anteriormente mencionados para cada punto activo.
+
 
 \subsection{Modificar punto activo}
 En los puntos activos tendremos la posibilidad de mover y redimensionar el punto activo a nuestro gusto de forma que se quede donde y como nosotros deseemos.
