--- a/4 GII/2do Semestre/Administración de Servidores/Prácticas/Práctica 4/Documento/RodríguezHeras_Jesús, OtalAlberro_Aratnzazu y MurasGonzález_Roberto.tex
+++ b/4 GII/2do Semestre/Administración de Servidores/Prácticas/Práctica 4/Documento/RodríguezHeras_Jesús, OtalAlberro_Aratnzazu y MurasGonzález_Roberto.tex
@@ -424,7 +424,7 @@ Una vez hecho eso, obtenemos lo siguiente:
 	Para ello, crearemos el fichero \texttt{personalWeb.php} en \texttt{/var/www/manolorg/} con un get:
 	\begin{lstlisting}{language=php}
 		<?php
-		echo '¡Hola ' . htmlspecialchars($_GET["user"]) . '!';
+		echo 'Hola ' . htmlspecialchars($_GET["user"]) . '!';
 		?>
 	\end{lstlisting}
 	
