Documentación PINF casi terminada en español

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/PlanProyecto.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Prolegomeno/PlanProyecto.tex
@@ -16,45 +16,6 @@ El proyecto tendrá una duración de tres meses y se realizarán reuniones seman
 	\label{Diagrama de Gantt}
 \end{figure}
 
-\section{Organización}
-\subsection{Roles}
-\begin{itemize}
-	\item \textbf{Administrador:} Luis Gutiérrez Flores.
-	\item \textbf{Analistas:} Jesús Rodríguez Heras y Nicolás Ruiz Requejo.
-	\item \textbf{Diseñadores:} Arantzazu Otal Alberro, Gabriel Fernando Sánchez Reina y Nicolás Ruiz Requejo.
-	\item \textbf{Desarrolladores:} Luis Gutiérrez Flores, Alejandro Segovia Gallardo y Alejandro José Caraballo García.
-	\item \textbf{Ingenieros de pruebas:} Jesús Rodríguez Heras y Luis Gutiérrez Flores.
-\end{itemize}
-
-\subsection{Recursos hardware y software}
-Como recursos hardware tenemos los portátiles de los 7 miembros del grupo y el servidor de STIMEY.
-
-Como recursos software tenemos el framework Laravel, Atom, Visual Studio Code, TeXStudio, PhPMyAdmin, MySQL, GitHub.
-
-\section{Costes}
-\subsection{Costes humanos}
-\begin{itemize}
-	\item Horas en el aprendizaje de Laravel.
-	\item Horas en formación de PHP y MySQL.
-	\item Horas en formación de GitHub.
-	\item Horas de documentación.
-\end{itemize}
-
-\subsection{Costes materiales}
-\begin{itemize}
-	\item Nuestros ordenadores.
-	\item Transporte a la escuela.
-	\item Gastos del servidor de STIMEY.
-\end{itemize}
-
-\section{Gestión de riesgos}
-\begin{itemize}
-	\item No cumplir plazos por intentar abarcar demasiado y dejar funcionalidades incompletas.
-\end{itemize}
-
-\section{Política de equipo}
-El equipo ha decidido hacer reuniones con una periodicidad de una semana con el cliente, a lo largo de la semana, los integrantes del equipo intentarán establecer reuniones entre ellos con la duración necesaria para continuar avanzando en el proyecto (tiempo estimado: dos horas).
-
 \section{Hitos} %Seguir poniendo los demás sprints
 \subsection{Sprint 0 (27 de febrero al 6 de marzo)}
 \begin{enumerate}
@@ -164,3 +125,47 @@ El equipo ha decidido hacer reuniones con una periodicidad de una semana con el 
 \begin{enumerate}
 	\item Finalización del sprint 7.
 \end{enumerate}
+
+\section{Política de equipo}
+El equipo ha decidido hacer reuniones con una periodicidad de una semana con el cliente, a lo largo de la semana, los integrantes del equipo intentarán establecer reuniones entre ellos con la duración necesaria para continuar avanzando en el proyecto (tiempo estimado: dos horas).
+
+\section{Organización}
+\subsection{Roles}
+\begin{itemize}
+	\item \textbf{Administrador:} Luis Gutiérrez Flores.
+	\item \textbf{Analistas:} Jesús Rodríguez Heras y Nicolás Ruiz Requejo.
+	\item \textbf{Diseñadores:} Arantzazu Otal Alberro, Gabriel Fernando Sánchez Reina y Nicolás Ruiz Requejo.
+	\item \textbf{Desarrolladores:} Luis Gutiérrez Flores, Alejandro Segovia Gallardo y Alejandro José Caraballo García.
+	\item \textbf{Ingenieros de pruebas:} Jesús Rodríguez Heras y Luis Gutiérrez Flores.
+\end{itemize}
+
+\subsection{Recursos hardware y software}
+Como recursos hardware tenemos los portátiles de los 7 miembros del grupo y el servidor de STIMEY.
+
+Como recursos software tenemos el framework Laravel, Atom, Visual Studio Code, TeXStudio, PhPMyAdmin, MySQL, GitHub.
+
+\section{Costes}
+\subsection{Costes humanos}
+\begin{itemize}
+	\item Horas en el aprendizaje de Laravel.
+	\item Horas en formación de PHP y MySQL.
+	\item Horas en formación de GitHub.
+	\item Horas de documentación.
+\end{itemize}
+
+\subsection{Costes materiales}
+\begin{itemize}
+	\item Nuestros ordenadores.
+	\item Transporte a la escuela.
+	\item Gastos del servidor de STIMEY.
+\end{itemize}
+
+\section{Gestión de riesgos}
+\begin{itemize}
+	\item No cumplir plazos por intentar abarcar demasiado y dejar funcionalidades incompletas.
+\end{itemize}
+
+\section{Modelo \textit{canvas}}
+\textcolor{red}{MODELO CANVAS}
+
+
