Traducido casi al completo

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/Implementation.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/Implementation.tex
@@ -1,10 +1,14 @@
 \chapter{Implementation of the system}
-%Aquí se narrará la implementación del sistema.
-
 \section{Technological environment}
+The technological environment of programming used in Fantasy project has been the framework \href{https://laravel.com/}{Laravel}, which has an integration with PHP and MySQL.
 
+Thanks to PHP, we have made that the Fantasy project webpage was the most similar to STIMEY's for its following integration in the plataform.
+
+And, with MySQL, we manage the database of the fantasies which students and teachers make, being in control of the property and of the access to the fantasies.
 
 \section{Source code}
+Source code of application is in the compressed file that we attached to the task.
 
 
 \section{Code quality}
+\textcolor{red}{Ni idea de esto}
