--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/Tests.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Developing/Tests.tex
@@ -1,19 +1,18 @@
 \chapter{System tests}
-%Aquí se narrarán las pruebas del sistema.
-
 \section{Unit tests}
-
+For the unit tests we have used the testing tool provided by Laravel, which allow us to program unit tests that will run automatically and will give us a direct result of each test.
 
 \section{Integration testing}
-
+The integration tests have been tested during the whole duration of the project while the different active points modules and workspaces where linked in the platform.
 
 \section{System tests}
-
+The system tests have been checked thanks to the testing tools provided by Laravel, which, like the unit tests, have been program to be linked automatically.
 
 \subsection{Functional testing}
-
+\textcolor{red}{ALGO}
 
 \subsection{Non-functional tests}
-
+\textcolor{red}{ALGO}
 
 \section{Acceptance Tests}
+We have been making the acceptance tests with our client of this project in each of the meetings, on which they argumented the changes they wanted and accepted or rejected our proposals.
