--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/UserManual.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/UserManual.tex
@@ -1,10 +1,56 @@
 \chapter{User manual}
-%Aquí va el manual de usuario.
-
 \section{Introduction}
+This is the manual that the users may follow in order to use the application\footnote{For more detail about the user manual, see the appendix.}.
+
+Having in mind that this will be a web application, the first step will be going to the web link where the service is set\footnote{If it has been integrated in STIMEY's platform, it will be in laboratory zone.}.
 
 \section{Features}
+The Fantasy application allows the user to create fantasies so the students learn in a more creative and funny way, with active points, quizzes associated to each active point and a final quiz associated to each fantasy.
+
+This score will be send to STIMEY's platform in order to be stored in each student profile. 
+
+The students can also create fantasies which are asked by their teacher as a task, this task could be in couples or individually and it can be evaluated afterwards by their teacher.
 
 \section{Previous requirements}
+The previous requirements when using the Fantasy project application are to enter in the weblink where the service is located and to register with the account of the user who is going to use the application.
+
+By that means, it is not necessary to install anything in the user's computers because the application is located in a server.
 
 \section{Utilization}
+When using the application, and having accessed with our user and password to the platform, we will see a main screen where we could see our fantasies (the ones that we have created) and the fantasies that we have marked as favourites to play again.
+
+\subsection{Create a fantasy}
+If we want to create a fantasy, we click the ``Create a new fantasy'' icon.
+
+Next, we fill in the necessary fields and the fantasy will be created.
+
+Once we have finished with the creation of the fantasy, we could go back and see it in the section reserved for our fantasies.
+
+\subsection{Modify fantasy}
+If we want to modify a fantasy, we click the ``Edit fantasy'' icon.
+
+Next, we modify the fields that we wish to change.
+
+\subsection{Delete fantasy}
+If we want to delete a fantasy, we click the ``Delete fantasy'' icon.
+
+\subsection{Duplicate fantasy}
+%Rellenar si se llaga a ello
+
+\subsection{Create active point}
+If we want to create an active point, we click the ``Create active point'' icon.
+
+Next, we fill in the necessary field and we will have created the first active point.
+
+We can create a maximum of ten active points following the steps mentioned above for each active point.
+
+\subsection{Modify active point}
+In active points we will have the possibility of moving and resize the active point as we like.
+
+Moreover, if we double click on them, we will have the possibility of changing the content of its fields.
+
+\subsection{Delete active point}
+%Rellenar si se llega
+
+\subsection{Play fantasy}
+If we want to play fantasy (created by ourselves or by another user) we click the ``Play fantasy'' icon and we could play the fantasy\footnote{We need to have in mind that for the students, we will only save the first score they get, although they can repeat the fantasy as many times as they wish.}.
