--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/Introduction.tex
@@ -1,9 +1,9 @@
 \chapter{Introduction}
 \section{Motivation}
-It is a work of the subject `` Computer Projects '' which, at a professional level, helps us to gain work experience and face real situations facing a demanding clientele.
+It is a work of the subject ``Proyectos Informaticos'' which, at a professional level, helps us to gain work experience and face real situations facing a demanding clientele.
 
 \section{Description of the current system}
-Initially, our client had an application that showed information about a topic on a page and the students did not focus on learning, but went directly to the final questionnaire in order to finish earlier. This means that students do not learn properly or encourage their imagination or creativity.
+Initially, our client had an application that showed information about a topic on a page and the students did not focus on learning, but went directly to the final questionnaire in order to finish earlier. This means that students did not learn properly or encourage their imagination or creativity.
 
 \section{Objectives and scope of the project}
 \subsection{Objetives}
@@ -15,7 +15,7 @@ To fulfill the general objective, we will have to cover the following points:
 	\item Can be evaluated by a teacher.
 	\item You can share fantasies between users.
 	\item It is simple and manageable by primary school students.
-	\item Foster STEM skills and teachings (science, technology, engeneering and maths).
+	\item Encourage STEM teaching skills (science, technology, engeneering and maths).
 \end{itemize}
 
 \subsection{Scope}
