--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Prolegomenon/ProyectPlan.tex
@@ -1,13 +1,13 @@
 \chapter{Planning}
-This chapter includes the planning, the approach and the principle of a project that we have named ``\textbf{Fantasy}'', a web portal where teachers can perform a series of tasks (fantasies) with the objective that students can play and learn in a creative way.
+This chapter includes the planning, the approach and the begining of a project that we have named ``\textbf{Fantasy}'', a web portal where teachers can make a series of tasks (called fantasies) with the objective that students can play and learn in a creative way.
 
-The students will also have the possibility of creating the fantasies that the teacher sends them as work and then they will be evaluated by said professor.
+The students will also have the possibility of creating the fantasies that the teacher sends them as project and then they will be evaluated by said professor.
 
 \section{Development methodology}
-The methodology used will be \ textbf {Scrum}: Agile development method characterized by having an incremental development and basing the quality of the result on knowledge rather than on the processes used.
+The methodology used will be \textbf{Scrum}: Agile development method characterized by having an incremental development and basing the quality of the result on knowledge rather than on the processes used.
 
 \section{Project planning}
-The project will last for three months and weekly meetings with the client will be held for a maximum of one hour.
+The project will last three months and weekly meetings with the client will be held for a maximum of one hour.
 \newpage
 \begin{figure}[h]
 	\centering
@@ -16,50 +16,11 @@ The project will last for three months and weekly meetings with the client will 
 	\label{Gantt diagram}
 \end{figure}
 
-\section{Organization}
-\subsection{Roles}
-\begin{itemize}
-	\item \textbf{Administrator:} Luis Gutiérrez Flores.
-	\item \textbf{Analysts:} Jesús Rodríguez Heras and Nicolás Ruiz Requejo.
-	\item \textbf{Designers:} Arantzazu Otal Alberro, Gabriel Fernando Sánchez Reina and Nicolás Ruiz Requejo.
-	\item \textbf{Developers:} Luis Gutiérrez Flores, Alejandro Segovia Gallardo and Alejandro José Caraballo García.
-	\item \textbf{Test Engineers:} Jesús Rodríguez Heras and Luis Gutiérrez Flores.
-\end{itemize}
-
-\subsection{Hardware and software resources}
-As hardware resources we have the laptops of the 7 members of the group and the STIMEY server.
-
-As software resources we have the framework Laravel, Atom, Visual Studio Code, TeXStudio, PhPMyAdmin, MySQL, GitHub.
-
-\section{Costs}
-\subsection{Human costs}
-\begin{itemize}
-	\item Hours in the learning of Laravel.
-	\item PHP and MySQL training hours.
-	\item GitHub training hours.
-	\item Documentation hours.
-\end{itemize}
-
-\subsection{Material costs}
-\begin{itemize}
-	\item Our computers.
-	\item Transportation to school.
-	\item STIMEY server expenses.
-\end{itemize}
-
-\section{Risk management}
-\begin{itemize}
-	\item Do not meet deadlines for trying to cover too much and leaving incomplete functionalities.
-\end{itemize}
-
-\section{Team policy}
-The team has decided to hold weekly meetings with the client, throughout the week, the team members will try to establish meetings between them with the necessary duration to continue advancing in the project (estimated time: two hours).
-
 \section{Hits} %Seguir poniendo los demás sprints
 \subsection{Sprint 0 ($27^{th}$ February to $6^{th}$ March)}
 \begin{enumerate}
 	\item Creation of work platforms and version control (GitHub).
-	\item Creating the requirements sketch.
+	\item Creation of the requirements sketch.
 	\item Creation of use cases and their descriptions.
 \end{enumerate}
 \subsection{Sprint 1 ($6^{th}$ March to $27^{th}$ March)}
@@ -80,7 +41,7 @@ The team has decided to hold weekly meetings with the client, throughout the wee
 \begin{enumerate}
 	\item End of front-end.
 	\item Final migrations of the database.
-	\item Completion of fantasy creation.
+	\item End of fantasy creation.
 \end{enumerate}
 
 \subsection{Sprint 4 ($10^{th}$ April to $24^{th}$ April)}
@@ -101,7 +62,7 @@ The team has decided to hold weekly meetings with the client, throughout the wee
 \begin{enumerate}
 	\item Analysis of system requirements.
 	\item Creation of use cases.
-	\item Approach of the system database.
+	\item Proposal of the system database.
 	\item Distribution of sprint tasks 0.
 \end{enumerate}
 
@@ -135,3 +96,44 @@ The team has decided to hold weekly meetings with the client, throughout the wee
 	\item End of sprint 4.
 	\item Start of sprint 5.
 \end{enumerate}
+
+\section{Team policy}
+The team has decided to hold weekly meetings with the client, throughout the week, the team members will try to establish meetings between them with the necessary duration to continue advancing in the project (estimated time: one hour).
+
+\section{Organization}
+\subsection{Roles}
+\begin{itemize}
+	\item \textbf{Administrator:} Luis Gutiérrez Flores.
+	\item \textbf{Analysts:} Jesús Rodríguez Heras and Nicolás Ruiz Requejo.
+	\item \textbf{Designers:} Arantzazu Otal Alberro, Gabriel Fernando Sánchez Reina and Nicolás Ruiz Requejo.
+	\item \textbf{Developers:} Luis Gutiérrez Flores, Alejandro Segovia Gallardo and Alejandro José Caraballo García.
+	\item \textbf{Test Engineers:} Jesús Rodríguez Heras and Luis Gutiérrez Flores.
+\end{itemize}
+
+\subsection{Hardware and software resources}
+As hardware resources we have the laptops of the 7 members of the group and the STIMEY server.
+
+As software resources we have the Laravel framework, Atom, Visual Studio Code, TeXStudio, phpMyAdmin, MySQL, GitHub.
+
+\section{Costs}
+\subsection{Human costs}
+\begin{itemize}
+	\item Hours in the learning of Laravel.
+	\item PHP and MySQL training hours.
+	\item GitHub training hours.
+	\item Documentation hours.
+\end{itemize}
+
+\subsection{Material costs}
+\begin{itemize}
+	\item Our computers.
+	\item Moving to faculty.
+	\item STIMEY server expenses.
+\end{itemize}
+
+\section{Risk management}
+\begin{itemize}
+	\item Not meeting deadlines for trying to cover too much and leaving incomplete functionalities.
+\end{itemize}
+
+\section{Canvas model}
