Terminada la traducción de PINF. Gracias TUKI.

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/Conclusions.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/Conclusions.tex
@@ -1,7 +1,11 @@
 \chapter{Conclusions}
-
 \section{Objetives}
+Fantasy project objetives are to make the students learn in a more creative and funny way through the creation of fantasies, and dinamically through the making of these fantasies and their active points.
 
-\section{Learned lessons}
+\section{Lessons learned}
+Regarding the lessons learned, all the group members have worked hard in the making of Fantasy project, focusing in the programation of the project for many hours. This has make us learn that a good initial organization is fundamental when covering a project of these dimenssions and with a client from the laboral world which distance us from the educative environment that the most of us are familiarized with.
+
+Because of that, time management and task delegation have been essential during this project. 
 
 \section{Future work}
+As future work shall remain the implementation of Fantasy web application in STIMEY's platform, so that way it will belong to their laboratories and it could be used by all users (both teaches and students) who wish to learn about a theme in particular or to used in class to show their students in a more interactive, creative and funny way.
