--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/InstalationOperationManual.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Epilogue/InstalationOperationManual.tex
@@ -1,12 +1,23 @@
 \chapter{Installation and operation manual}
 \section{Introduction}
+Due to the fact that Fantasy project is not an application that can be installed in a personal computer, but it is developed as a web application, it will have to be installed in a server.
 
 \section{Previous requirements}
+In order to install the application in the server, we need the Laravel framework, PHP and MySQL. Once those elements are installed, we will only have to launch the application from the directory of the project.
 
 \section{Inventory of components}
+The necesary components to launch Fantasy application would be:
+\begin{itemize}
+	\item Laravel framework.
+	\item PHP.
+	\item MySQL.
+	\item phpMyAdmin (optional).
+\end{itemize}
 
 \section{Installation procedures}
-
-\section{Operating procedures and service level}
+In the Laravel installation itself, we will be installing both PHP and MySQL. For that reason, we will only need to follow the following \href{https://styde.net/instalacion-de-composer-y-laravel/}{tutorial}.
 
 \section{Implantation tests}
+The implementation tests have been tested personally by the Fantasy team, verifying the possible configurations that could lead to an error, and they have been resolved mostly.
+
+Those tests have been made in the Fantasy team's laptops.
